z-index fix

--- a/src/components/MyResume/my-resume.scss
+++ b/src/components/MyResume/my-resume.scss
@@ -82,7 +82,6 @@
         left: 50%;
         margin-left: -21px;
         background-color: #ffffff;
-        z-index: 100;
         display: flex;
         justify-content: center;
         align-items: center;
